# haskell-katas

./: .gitignore  haskell-kata.cabal  input.dt  missing.dt  poem.txt  stack.yaml
ideas/: code.js
src/: Anagrams.hs  AppendInsertBuilder.hs  BankOCR.hs  BookCalendar.hs  DamagePen.hs  DiceRoller.hs  GameOfLife.hs  Hearthstone.hs  Main.hs  Mazes.hs  Opimization.hs  Optimization.hs  PlayTicTacToe.hs  PoemSearchSlicer.hs  PoemSlicer.hs  PokerHands.hs  PokerHoldEm.hs  RomanNumeral.hs  TicTacToe.hs  test.txt
test/: GameOfLifeTest.hs  Hearthstone.hs  HearthstoneTest.hs  MainTest.hs  PokerHandsTest.hs  PokerHoldEmTest.hs  RomanNumeralTest.hs  TicTacToeTest.hs
