name:                haskell-kata
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/haskell-kata#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     TicTacToe
  build-depends:      
                     MonadRandom >= 0.4
                     , base >= 4.7 && < 5
                     , containers >= 0.5.6.2
                     , directory >= 1.2.2.0
                     , lens >= 4.12.3
                     , random >= 1.1
                     , random-shuffle
                     , split >= 0.2.2
                     , tasty
                     , tasty-hunit
                     , time >= 1.5.0.1
  default-language:    Haskell2010

executable haskell-kata-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
                     
                      MonadRandom >= 0.4
                     , haskell-kata
                     , base >= 4.7 && < 5
                     , containers >= 0.5.6.2
                     , directory >= 1.2.2.0
                     , lens >= 4.12.3
                     , random >= 1.1
                     , random-shuffle
                     , split >= 0.2.2
                     , tasty
                     , tasty-hunit
                     , time >= 1.5.0.1

test-suite haskell-kata-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  main-is:             TicTacToeTest.hs
  build-depends:
                      HUnit >= 1.2.5.2
                     , MonadRandom >= 0.4
                     , base >= 4.7 && < 5
                     , containers >= 0.5.6.2
                     , haskell-kata
                     , directory >= 1.2.2.0
                     , lens >= 4.12.3
                     , random >= 1.1
                     , random-shuffle
                     , split >= 0.2.2
                     , tasty
                     , tasty-hunit
                     , time >= 1.5.0.1